🚧 Context menu added to PlaceDetails screen.

--- a/event-manager-ios/en.lproj/Localizable.strings
+++ b/event-manager-ios/en.lproj/Localizable.strings
@@ -37,3 +37,6 @@
 "Tickets.Title" = "Tickets";
 
 "TicketDetails.Title" = "Details";
+
+"PlaceDetails.ContextMenu.Cancel" = "Cancel";
+"PlaceDetails.ContextMenu.GetDirections" = "Get Directions";
