🚧 Login user before showing profile.

--- a/event-manager-ios/en.lproj/Localizable.strings
+++ b/event-manager-ios/en.lproj/Localizable.strings
@@ -48,3 +48,6 @@
 "Profile.BillingInfo.Name" = "Name";
 "Profile.BillingInfo.Address" = "Address";
 "Profile.Email" = "email: ";
+
+"Login.Error.Title" = "Error";
+"Login.Error.Ok.Button" = "OK";
